--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -1,5 +1,5 @@
 header{
-  height: 30rem;
+  height: 25rem;
   display: flex;
   flex-direction: column;
   background-color: rgba(0, 0, 0, .2);
@@ -9,7 +9,7 @@ header{
   .pf-wrap{
     position: absolute;
     width: 100%;
-    height: 300px;
+    height: 25rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -67,6 +67,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    z-index: 10;
 
     .nav-list{
       display: flex;
@@ -82,25 +83,44 @@ header{
     }
   }
 
+  .nav-scroll{
+    background: #f3f7fa;
+    opacity: .8;
+    box-shadow: 0 0 5px 0 #333;
+    .nav-list{
+      display: flex;
+      align-items: center;
+
+      .nav-list-item{
+        padding: 0 .6rem;
+        color: #333333;
+        &:not(:last-child){
+          margin-right: 1rem;
+        }
+      }
+    }
+  }
+
   .header-bg{
     z-index: -1;
     position: absolute;
-    height: 30rem;
+    height: 25rem;
     width: 100%;
     left: 0;
     top: 0;
-    background: url('../images/banner.jpg') no-repeat;
+    background: no-repeat center;
     background-size: cover;
   }
 
 }
 
+
 @media screen and (max-width: 768px) {
   header{
-    height: 24rem;
+    height: 20rem;
 
     .pf-wrap{
-      height: 24rem;
+      height: 20rem;
       .pf-picture{
         .pf-picture-wrap{
           width: 8rem;
@@ -116,8 +136,16 @@ header{
           font-size: 1.4rem;
       }
     }
+    .nav{
+      padding: .3rem 1rem;
+      .nav-list{
+        .nav-list-item{
+          padding: 0 .6rem;
+        }
+      }
+    }
     .header-bg{
-      height: 24rem;
+      height: 20rem;
     }
   }
 }
