--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -126,12 +126,41 @@ a:hover {
     height: 6rem;
   }
 }
-.fade-transition {
-  transition: all .4s ease;
+.fade-enter-active {
+  animation: router-fade 0.5s;
 }
-.fade-enter,
-.fade-leave {
-  opacity: 0;
+.fade-leave-active {
+  animation: router-fade 0.5s reverse;
+}
+@keyframes router-fade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@-webkit-keyframes router-fade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@-moz-keyframes router-fade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 @keyframes toproll {
   from {
