--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -6,10 +6,6 @@
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-@font-face {
-  font-family: Handwriting;
-  src: url('../font/MFQingShu_Noncommercial-Regular.ttf');
-}
 html {
   -webkit-text-size-adjust: none;
   font-size: 10px;
@@ -23,7 +19,7 @@ body {
   font-size: 1.6rem;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif;
+  font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif, "PingFang SC ExtraLight";
   color: #404040;
   line-height: 1.7;
   height: 100%;
@@ -44,11 +40,22 @@ a:hover {
 #app {
   display: flex;
   flex-flow: column;
-  height: 100%;
+  background: #d9e8bf fixed;
 }
 #app .header,
 #app .footer {
   flex: 0 0 auto;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 80%;
+  max-width: 78rem;
+  margin: 0 auto;
+}
+#app .header {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  overflow: hidden;
 }
 #app .main {
   flex: 1 0 auto;
@@ -63,12 +70,17 @@ a:hover {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 2rem .5rem;
+  padding: 0 .5rem;
+  background-color: #ffffff;
 }
 #app .footer {
   order: 3;
   display: flex;
   height: 10rem;
+  background-color: #ffffff;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  overflow: hidden;
 }
 #app .back-top {
   position: fixed;
@@ -118,12 +130,24 @@ a:hover {
   cursor: pointer;
 }
 @media screen and (max-width: 768px) {
+  #app .header {
+    width: 100% !important;
+    border-left: none !important;
+    border-right: none !important;
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+  }
   #app .main-wrapper {
     width: 100% !important;
-    padding: 0 .8rem;
+    padding: 0 .8rem !important;
+    border-left: none !important;
+    border-right: none !important;
   }
   #app .footer {
-    height: 6rem;
+    width: 100% !important;
+    height: 6rem !important;
+    border-left: none !important;
+    border-right: none !important;
   }
 }
 .fade-enter-active {
