--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -12,10 +12,10 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-@font-face {
-  font-family: Handwriting;
-  src: url('../font/MFQingShu_Noncommercial-Regular.ttf');
-}
+//@font-face {
+//  font-family: Handwriting;
+//  src: url('../font/MFQingShu_Noncommercial-Regular.ttf');
+//}
 
 html {
   -webkit-text-size-adjust: none;
@@ -29,7 +29,7 @@ body {
   font-size: 1.6rem;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif;
+  font-family: -apple-system, "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif, "PingFang SC ExtraLight";
   color: #404040;
   line-height: 1.7;
   height: 100%;
@@ -47,10 +47,28 @@ a, a:link, a:visited, a:focus, a:hover {
 #app {
   display: flex;
   flex-flow: column;
-  height: 100%;
+  //height: 100%;
+  background: #d9e8bf fixed;
 
   .header, .footer {
     flex: 0 0 auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    //border-left: thin solid #333333;
+    //border-right: thin solid #333333;
+    width: 80%;
+    max-width: 78rem;
+    margin: 0 auto;
+  }
+
+  .header{
+    //box-shadow: 0 0 3px #333;
+    //-webkit-box-shadow: 0 0 3px #333;
+    //-moz-box-shadow: 0 0 3px #333;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    overflow: hidden;
   }
 
   .main {
@@ -59,6 +77,7 @@ a, a:link, a:visited, a:focus, a:hover {
     display: flex;
     justify-content: center;
 
+
     .main-wrapper {
       width: 80%;
       max-width: 78rem;
@@ -66,7 +85,13 @@ a, a:link, a:visited, a:focus, a:hover {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
-      padding: 2rem .5rem;
+      padding: 0 .5rem;
+      //border-left: thin solid #333333;
+      //border-right: thin solid #333333;
+      //box-shadow: 0 0 3px #333;
+      //-webkit-box-shadow: 0 0 3px #333;
+      //-moz-box-shadow: 0 0 3px #333;
+      background-color: #ffffff;
     }
   }
 
@@ -74,6 +99,10 @@ a, a:link, a:visited, a:focus, a:hover {
     order: 3;
     display: flex;
     height: 10rem;
+    background-color: #ffffff;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    overflow: hidden;
   }
 
   .back-top {
@@ -116,6 +145,7 @@ a, a:link, a:visited, a:focus, a:hover {
       -moz-animation: toproll 12s linear infinite normal;
       animation: toproll 12s linear infinite normal;
     }
+
     .iconfont{
       display: inline-block;
       font-size: inherit;
@@ -128,13 +158,25 @@ a, a:link, a:visited, a:focus, a:hover {
   }
 
   @media screen and (max-width: 768px) {
+    .header{
+      width: 100% !important;
+      border-left: none !important;
+      border-right: none !important;
+      border-top-left-radius: 0 !important;
+      border-top-right-radius: 0 !important;
+    }
     .main-wrapper {
       width: 100% !important;
-      padding: 0 .8rem;
+      padding: 0 .8rem !important;
+      border-left: none !important;
+      border-right: none !important;
     }
 
     .footer {
-      height: 6rem;
+      width: 100% !important;
+      height: 6rem !important;
+      border-left: none !important;
+      border-right: none !important;
     }
   }
 }
@@ -142,6 +184,7 @@ a, a:link, a:visited, a:focus, a:hover {
 .fade-enter-active {
   animation: router-fade .5s;
 }
+
 .fade-leave-active {
   animation: router-fade .5s reverse;
 }
