--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -4,7 +4,6 @@ header {
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
-  font-family: Handwriting;
 }
 header .pf-wrap {
   position: absolute;
@@ -14,6 +13,8 @@ header .pf-wrap {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: no-repeat center;
+  background-size: cover;
 }
 header .pf-wrap .pf-picture {
   margin: 0 auto 0;
@@ -54,7 +55,8 @@ header .pf-wrap .pf-intro {
 }
 header .nav {
   position: fixed;
-  width: 100%;
+  width: 80%;
+  max-width: 78rem;
   padding: 1rem;
   display: flex;
   align-items: center;
@@ -88,16 +90,6 @@ header .nav-scroll .nav-list .nav-list-item {
 header .nav-scroll .nav-list .nav-list-item:not(:last-child) {
   margin-right: 1rem;
 }
-header .header-bg {
-  z-index: -1;
-  position: absolute;
-  height: 25rem;
-  width: 100%;
-  left: 0;
-  top: 0;
-  background: no-repeat center;
-  background-size: cover;
-}
 @media screen and (max-width: 768px) {
   header {
     height: 20rem;
@@ -116,6 +108,7 @@ header .header-bg {
     font-size: 1.4rem;
   }
   header .nav {
+    width: 100%;
     padding: .3rem 1rem;
   }
   header .nav .nav-list .nav-list-item {
