--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -4,7 +4,7 @@ header{
   flex-direction: column;
   background-color: rgba(0, 0, 0, .2);
   position: relative;
-  font-family: Handwriting;
+  //font-family: Handwriting;
 
   .pf-wrap{
     position: absolute;
@@ -14,6 +14,8 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: no-repeat center;
+    background-size: cover;
 
     .pf-picture{
       //width: 10rem;
@@ -62,7 +64,8 @@ header{
 
   .nav{
     position: fixed;
-    width: 100%;
+    width: 80%;
+    max-width: 78rem;
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -101,17 +104,6 @@ header{
     }
   }
 
-  .header-bg{
-    z-index: -1;
-    position: absolute;
-    height: 25rem;
-    width: 100%;
-    left: 0;
-    top: 0;
-    background: no-repeat center;
-    background-size: cover;
-  }
-
 }
 
 
@@ -137,6 +129,7 @@ header{
       }
     }
     .nav{
+      width: 100%;
       padding: .3rem 1rem;
       .nav-list{
         .nav-list-item{
