--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,12 +1,15 @@
 #index {
-  //position: relative;
-  font-family: Handwriting;
+  position: relative;
+  //font-family: Handwriting;
 
   .tags {
     width: 100%;
     display: flex;
     align-items: center;
-    margin-bottom: 1rem;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 1rem 0 0;
 
     .tags-item {
       padding: .2rem .6rem;
@@ -18,6 +21,8 @@
       border: thin dashed #d5d5d5;
       margin-bottom: 1rem;
       box-shadow: 0 0 3px #333;
+      -webkit-box-shadow: 0 0 3px #333;
+      -moz-box-shadow: 0 0 3px #333;
       cursor: pointer;
 
       &:hover {
@@ -51,21 +56,33 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 4px;
     overflow: hidden;
 
     .article-list-item {
       width: 100%;
       position: relative;
-      border-bottom: 2px dotted #dadada;
+      //border-bottom: 2px dotted #dadada;
+      padding: 1.5rem 1.2rem 1.5rem;
+      -webkit-border-radius: .4rem;
+      -moz-border-radius: .4rem;
+      border-radius: .4rem;
+      //border: thin dashed #d5d5d5;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
-      padding-bottom: 1rem;
       -webkit-transition: all ease-out .8s;
       -moz-transition: all ease-out .8s;
       -ms-transition: all ease-out .8s;
       transition: all ease-out .8s;
-      padding-top: 1.5rem;
+      margin-bottom: 1.2rem;
+      box-shadow: 0 0 3px #333;
+      -webkit-box-shadow: 0 0 3px #333;
+      -moz-box-shadow: 0 0 3px #333;
+      background-color: rgba(243,247,250,.5);
 
       &:nth-child(odd) {
         left: 100%;
@@ -76,7 +93,7 @@
       }
 
       &:hover {
-        border-bottom: 2px solid #dadada;
+        //border-bottom: 2px solid #dadada;
       }
 
       .article-info-wrap {
@@ -197,7 +214,7 @@
         width: 100%;
         display: flex;
         align-items: center;
-        margin-bottom: 1rem;
+        margin: 1rem auto;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
@@ -246,7 +263,7 @@
     .tags {
       .tags-item {
         padding: .1rem .4rem;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
       }
     }
     .article-list {
