--- a/src/assets/css/friends.less
+++ b/src/assets/css/friends.less
@@ -5,6 +5,8 @@
     width: 100%;
     .friends-section-title{
       font-weight: 400;
+      padding: 1rem 0 0;
+      font-size: 1.6rem;
     }
     .friends-ul{
       width: 100%;
@@ -13,7 +15,7 @@
       align-items: center;
       overflow: hidden;
       margin-bottom: 4.2rem;
-      margin-top: 2rem;
+      padding: 4px 0;
 
       .friends-li{
         width: 100%;
@@ -127,6 +129,8 @@
   @media screen and (max-width: 768px) {
 
     .friends-section {
+      .friends-section-title{
+      }
       .friends-ul{
         .friends-li{
 
