--- a/src/assets/css/footer.less
+++ b/src/assets/css/footer.less
@@ -3,6 +3,7 @@ footer{
   .cpr{
     font-size: 1.4rem;
     margin: auto;
-    color: #3d3d3d;
+    color: #333333;
+    text-align: center;
   }
 }
