--- a/src/assets/css/friends.css
+++ b/src/assets/css/friends.css
@@ -3,6 +3,8 @@
 }
 #friends .friends-section .friends-section-title {
   font-weight: 400;
+  padding: 1rem 0 0;
+  font-size: 1.6rem;
 }
 #friends .friends-section .friends-ul {
   width: 100%;
@@ -11,7 +13,7 @@
   align-items: center;
   overflow: hidden;
   margin-bottom: 4.2rem;
-  margin-top: 2rem;
+  padding: 4px 0;
 }
 #friends .friends-section .friends-ul .friends-li {
   width: 100%;
