--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -62,6 +62,9 @@ header .nav {
   align-items: center;
   justify-content: flex-end;
   z-index: 10;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 header .nav .nav-list {
   display: flex;
@@ -75,9 +78,8 @@ header .nav .nav-list .nav-list-item:not(:last-child) {
   margin-right: 1rem;
 }
 header .nav-scroll {
-  background: #f3f7fa;
+  background-image: linear-gradient(rgba(230, 134, 32, 0.8), rgba(228, 69, 3, 0));
   opacity: .8;
-  box-shadow: 0 0 5px 0 #333;
 }
 header .nav-scroll .nav-list {
   display: flex;
@@ -85,10 +87,38 @@ header .nav-scroll .nav-list {
 }
 header .nav-scroll .nav-list .nav-list-item {
   padding: 0 .6rem;
-  color: #333333;
+  color: #480300;
+}
+header .nav-scroll .nav-list .nav-list-item:hover {
+  mix-blend-mode: difference;
 }
 header .nav-scroll .nav-list .nav-list-item:not(:last-child) {
   margin-right: 1rem;
+}
+header .contact {
+  position: absolute;
+  left: 8px;
+  bottom: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+header .contact .contact-item {
+  width: 30px;
+  height: 30px;
+}
+header .contact .contact-item:hover {
+  mix-blend-mode: difference;
+}
+header .contact .contact-item img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+header .contact .contact-item:not(:last-child) {
+  margin-bottom: 10px;
 }
 @media screen and (max-width: 768px) {
   header {
