--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -71,6 +71,9 @@ header{
     align-items: center;
     justify-content: flex-end;
     z-index: 10;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 
     .nav-list{
       display: flex;
@@ -79,6 +82,7 @@ header{
       .nav-list-item{
         padding: 0 .6rem;
         color: #ffffff;
+
         &:not(:last-child){
           margin-right: 1rem;
         }
@@ -87,16 +91,20 @@ header{
   }
 
   .nav-scroll{
-    background: #f3f7fa;
+    background-image: linear-gradient(rgba(230,134,32,.8),rgba(228,69,3,0));
     opacity: .8;
-    box-shadow: 0 0 5px 0 #333;
+    //box-shadow: 0 0 5px 0 #333;
     .nav-list{
       display: flex;
       align-items: center;
 
       .nav-list-item{
         padding: 0 .6rem;
-        color: #333333;
+        color: #480300;
+
+        &:hover{
+          mix-blend-mode: difference;
+        }
         &:not(:last-child){
           margin-right: 1rem;
         }
@@ -104,6 +112,35 @@ header{
     }
   }
 
+  .contact{
+    position: absolute;
+    left: 8px;
+    bottom: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    .contact-item{
+      width: 30px;
+      height: 30px;
+
+      &:hover{
+        mix-blend-mode: difference;
+      }
+
+      img{
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+
+      &:not(:last-child){
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
 
 
