--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -17,7 +17,6 @@
   -webkit-border-radius: .4rem;
   -moz-border-radius: .4rem;
   border-radius: .4rem;
-  border: thin dashed #d5d5d5;
   margin-bottom: 1rem;
   box-shadow: 0 0 3px #333;
   -webkit-box-shadow: 0 0 3px #333;
@@ -56,7 +55,7 @@
 #index .article-list .article-list-item {
   width: 100%;
   position: relative;
-  padding: 1.5rem 1.2rem 1.5rem;
+  padding: 1.5rem 1.2rem;
   -webkit-border-radius: .4rem;
   -moz-border-radius: .4rem;
   border-radius: .4rem;
@@ -68,16 +67,8 @@
   -ms-transition: all ease-out 0.8s;
   transition: all ease-out 0.8s;
   margin-bottom: 1.2rem;
-  box-shadow: 0 0 3px #333;
-  -webkit-box-shadow: 0 0 3px #333;
-  -moz-box-shadow: 0 0 3px #333;
-  background-color: rgba(243, 247, 250, 0.5);
-}
-#index .article-list .article-list-item:nth-child(odd) {
-  left: 100%;
-}
-#index .article-list .article-list-item:nth-child(even) {
-  left: -100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  opacity: .2;
 }
 #index .article-list .article-list-item .article-info-wrap {
   width: 100%;
@@ -97,7 +88,7 @@
   -ms-transition: all ease-in-out 0.5s;
 }
 #index .article-list .article-list-item .article-info-wrap .article-author-img:hover {
-  border-color: #9C9;
+  border-color: #e5c985;
   transform: rotate(360deg);
   -webkit-transform: rotate(360deg);
   -moz-transform: rotate(360deg);
@@ -142,13 +133,13 @@
   -ms-transition: all ease-in-out 0.5s;
 }
 #index .article-list .article-list-item .article-info-wrap .article-info .article-info-title:hover {
-  color: #ffb1bd;
+  color: #e5c985;
 }
 #index .article-list .article-list-item .article-info-wrap .article-info .article-info-others span {
   font-size: 1.4rem;
 }
 #index .article-list .article-list-item .article-info-wrap .article-info .article-info-others span:hover {
-  color: #ffb1bd;
+  color: #e5c985;
 }
 #index .article-list .article-list-item .article-info-wrap .article-info .article-info-others span:not(:last-child) {
   margin-right: 4px;
